# akm

./: .gitignore  CONTRIBUTING.md  Implementation.md  LICENSE  README.md  akm.yaml  pyproject.toml  requirements-dev.txt  requirements-gnn.txt  requirements.txt
akm/: __init__.py
akm/adapters/: __init__.py
akm/adapters/software_engineering/: __init__.py  schema.yaml  transformer.py
akm/api/: __init__.py  client.py
akm/cli/: __init__.py  main.py
akm/core/: __init__.py  config.py  exceptions.py  interfaces.py  models.py
akm/domain/: __init__.py  transformer.py
akm/domain/prompts/: __init__.py  context.py
akm/domain/schema/: __init__.py  loader.py  mapper.py
akm/gnn/: __init__.py  base.py  community_detection.py  link_prediction.py
akm/graph/: __init__.py  base.py
akm/graph/memory/: client.py
akm/graph/neo4j/: __init__.py  client.py  query_builder.py  repository.py
akm/ingestion/: __init__.py  pipeline.py
akm/ingestion/connectors/: __init__.py  base.py  files.py
akm/ingestion/extraction/: __init__.py  ner.py  relations.py
akm/links/: __init__.py  decay.py  manager.py  soft_link.py  validation.py
akm/query/: __init__.py  engine.py  synthesis.py  temporal.py  traversal.py
akm/query/llm/: __init__.py  langchain.py
akm/vector/: __init__.py  base.py
akm/vector/chromadb/: __init__.py  chunking.py  client.py
akm/vector/embeddings/: __init__.py  base.py  openai.py  sentence_transformers.py
akm/vector/search/: __init__.py  hybrid.py
data/code/: order_service.py  user_service.py
data/docs/: api-design.md  architecture.md  deployment.md  incident-2024-03-18.md  onboarding.md  security.md
data/notes/: meeting-2024-03-15.md  meeting-2024-03-22.md  project-roadmap.md  tech-decisions.md
docs/: ARCHITECTURE.md  DOMAIN_TRANSFORMER.md
my_project/: akm.yaml
test_project/: akm.yaml
tests/: conftest.py
tests/integration/: test_akm_client.py  test_sample_data.py
tests/unit/core/: test_models.py
tests/unit/links/: test_decay.py
tests/unit/vector/: __init__.py  test_chunking.py  test_hybrid_search.py
